# oberon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.gpu  Dockerfile.server  LICENSE  PRODUCT.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  sample-aoi.geojson
.bounds/: .gitignore  root.yaml
.bounds/manifests/: ai.yaml  api.yaml  artifacts.yaml  cli.yaml  config.yaml  core.yaml  pipeline.yaml  store.yaml  telemetry.yaml
.github/workflows/: ci.yml
control-plane/: Cargo.toml
control-plane/src/: alerts.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  pipeline.rs  telemetry.rs  validation.rs
control-plane/src/middleware/: audit.rs  auth.rs  mod.rs  ratelimit.rs
control-plane/src/routes/: audit.rs  change.rs  dashboard.rs  health.rs  mod.rs  portfolio.rs  review.rs
control-plane/tests/: db_test.rs
dashboard/: DESIGN.md  PRODUCT.md  app.js  index.html  style.css
docs/: ARCHITECTURE.md  CHANGELOG.md  CLAY_EXPERIMENT_REPORT.md  CONTRIBUTING.md  DEVELOPMENT_SCOPE.md  EVALUATION_REPORT.md  GETTING_STARTED.md  GLOSSARY.md  LOGGING_STANDARD.md  README.md  ROADMAP.md  SPEC_DRIVEN_DEVELOPMENT.md  TASK_CONTRACT.md  TESTING_GUIDE.md
docs/api/: cli.md  examples.md  gaps_vs_product_brief.md
docs/architecture/: DATA_FLOW.md  README.md  SYSTEM_DESIGN.md
docs/mini-sdd/: README.md
docs/planning/: README.md
docs/sdd/: ai-instructions.md
examples/: README.md  sdk_demo.py
samples/: README.md  amazon-deforestation.geojson  california-wildfire.geojson  iowa-cropland.geojson  portugal-wildfire.geojson
scripts/: run_evaluation.py
src/oberon/: __init__.py
tests/: benchmark_utils.py  conftest.py  test_benchmark_validation.py  test_dashboard_static.py  test_run_evaluation.py
tests/ai/: test_clay_adapter.py  test_comparison.py  test_model_adapter.py  test_tiled_inference.py
tests/api/: test_contracts.py
tests/artifacts/: test_evidence_bundle.py  test_geojson.py  test_images.py  test_provenance.py
tests/cli/: test_analyze.py  test_aoi_command.py  test_orchestrator.py  test_request_json.py
tests/config/: test_model_registry.py
tests/core/: test_baselines.py  test_change_detection.py  test_geometry.py
tests/data/: sample.geojson
tests/integration/: test_golden_examples.py
tests/pipeline/: test_cog_cache.py  test_cog_reader.py  test_preparation.py  test_reproject_findings.py  test_scene_quality.py  (+1 more)
(+130 files in other folders)
