[project]
name = "oberon"
version = "0.1.0"
description = "Open, self-hostable Earth observation monitoring engine"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Farzin Shifat" },
]
requires-python = ">=3.12"
dependencies = [
    "rasterio>=1.4",
    "numpy>=1.26",
    "pystac-client>=0.8",
    "shapely>=2.0",
    "geopandas>=0.14",
    "click>=8.0",
    "pydantic>=2.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
ai = [
    "torch>=2.6",
    "torchvision>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.5",
]
docs = [
    "mkdocs>=1.6",
]

[project.urls]
homepage = "https://github.com/farzin/oberon"
repository = "https://github.com/farzin/oberon"

[project.scripts]
oberon = "oberon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oberon"]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
lint.ignore = ["E501"]  # line-length handled by formatter
format.preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SIM"]  # allow simple asserts in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
