[package]
name = "oberon-control-plane"
version = "0.1.0"
edition = "2024"
description = "Oberon control plane — HTTP API server, auth, job orchestration"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
